# PythonProject

./: README.md  external_api.py  first_log.txt  pyproject.toml  second_log.txt  utils.py
src/: decorators.py  generators.py  masks.py  processing.py  widget.py
tests/: test_decorators.py  test_functions.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
