[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=1.20.0,<2.0.0)"
]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.black]
line-length = 119
exclude = '''
/(
  \.git
)/
'''

[tool.isort]
profile = "black"
line_length = 119
force_single_line = true

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = [
  "venv"
]